v3.2.3.2-DEV
1. 修复某些情况下双击start.bat无法启动程序的问题
2. start.bat替换成hs-script.exe